--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,7 @@
 #app{
     margin: auto;
     width: 1300px;
-    height: 3000px;
-    /* background-color: aqua; */
+    height: 5000px;
     position: relative;
 }
 #app .header{
@@ -25,7 +24,7 @@
     left: 30px;
 }
 #app .header  .btn-success{
-    width: 130px;
+    width: 140px;
     height: 40px;
     position: absolute;
     border-radius: 4px 4px 4px 4px;
@@ -233,7 +232,7 @@
     text-align: center;
     font-weight: bold;
     margin-top: 180px;
-    margin-right: 280px;
+    margin-right: 100px;
 }
 #app .main .profile-school .information-school .panel-information{
     width: 650px;
@@ -260,4 +259,141 @@
     font-weight: bold;
     margin-top: 20px;
     margin-right: 10px;
+}
+
+#app .main .experience-personal{
+    width: 1300px;
+    height: 1200px;
+}
+
+#app .main .experience-personal .title-experience{
+    font-size: 30px;
+    font-weight: bold;
+    color:black;
+    line-height: 60px;
+    margin-left: 35rem;
+}
+ul {
+    height: 1200px;
+    padding: 50px 0;
+  }
+  
+  ul li {
+    position:relative;
+    list-style-type: none;
+    width: 6px;
+    background-color: blue;
+    margin: 0 auto;
+    padding-top: 50px;
+  }
+  
+  ul li::after {
+    background: grey;
+    content: '';
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    position:absolute;
+    left:50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    }
+  
+  
+  ul li div{
+    position: relative;
+    width: 400px;
+    height: 300px;
+    padding: 15px;
+    border-radius: 5px;
+    bottom: 0;
+    background: rgba(42,50,113, .28);
+  }
+  
+  ul li:nth-child(odd) div {
+    left: 45px;
+  }
+  
+  ul li:nth-child(even) div {
+    left: -445px;
+  }
+  
+  time {
+    font-weight: bold;
+    font-size: 18px;
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  ul li div {
+    visibility: hidden;
+    opacity: 0;
+    transition: all .5s ease-in-out;
+  }
+  
+  ul li:nth-child(odd) div {
+    transform: translate3d(200px, 0, 0);
+  }
+  
+  ul li:nth-child(even) div {
+    transform: translate3d(-200px, 0, 0);
+  }
+  
+  ul li.show div {
+    transform: none;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  #app .main .working-experience{
+    width: 1300px;
+    height: 500px;
+  }
+
+  #app .main .working-experience .title-experience{
+    font-size: 30px;
+    font-weight: bold;
+    color:black;
+    line-height: 60px;
+    margin-left: 35rem;
+}
+
+#app .main .certificates{
+    width: 1300px;
+    height: 600px;
+}
+
+#app .main .certificates .title-experience{
+    font-size: 30px;
+    font-weight: bold;
+    color:black;
+    line-height: 60px;
+    margin-left: 35rem;
+}
+
+#app .main .certificates .album{
+    width: 1300px;
+    height: 540px;
+    position: relative;
+}
+
+#app .main .certificates .album img:first-child{
+    margin-top: 30px;
+    margin-left: 30px;
+}
+#app .main.certificates .album img{
+    float: left;
+    position: absolute;
+    margin-left: 65px;
+}
+
+#app .footer{
+    width: 1300px;
+    height: 300px;
+    background-color: black;
+}
+
+#app .footer span{
+    color: white;
+    font-weight: bold;
 }
