--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 #app .header{
     width: 1300px;
     height: 250px;
-    background-image: url("../images/header.png");
+    background-image: url("../images/header.jpg");
     background-size: 1300px;
 }
 #app .header .img-profile{
